I think I found the mobile overflow issue

--- a/sources/global/main.css
+++ b/sources/global/main.css
@@ -106,6 +106,7 @@ body{
 header{
     position: fixed;
     inset: 0 0 auto 0;
+    max-width: 100vw;
     z-index: 10;
     pointer-events: none;
 }
