--- a/sources/work/work.css
+++ b/sources/work/work.css
@@ -938,6 +938,7 @@ article{
 .history-class{
     aspect-ratio: 5 / 4;
     height: 40%;
+    max-width: 100vw;
     position: absolute;
     inset: 0 auto auto 0;
 }
@@ -951,6 +952,7 @@ article{
 .balcony{
     aspect-ratio: 5 / 4;
     height: 40%;
+    max-width: 100vw;
     position: absolute;
     inset: auto 0 0 auto;
 }
